...
            tags = listOf("chillout", "ambient"),
            stationUuid = "960cf833-0601-11e8-ae97-52543be04c81",
        ),
        CuratedStation(
            name = "REYFM -#LOFI",
            streamUrl = "https://listen.reyfm.de/lofi_320kbps.mp3",
            country = "Germany",
            tags = listOf("chill", "lofi"),
            stationUuid = "4e681355-3ebb-4b6c-a79a-d7cc81a0afd5",
        ),
        CuratedStation(
            name = "Smooth Chill",
            streamUrl = "https://media-ssl.musicradio.com/ChillMP3",
...
